<resources>
    <string name="app_name">Health Rate Monitor &amp; Adjuster </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here</string>
    <string name="health_care_app_logo">Health Care App Logo</string>
    <string name="logo">logo</string>
    <string name="previous_sessions">Previous Sessions</string>
    <string name="play_pause">PLAY/PAUSE</string>
    <string name="skip_song">Skip Song</string>
    <string name="previous_song">PREVIOUS SONG</string>
    <string name="drake_in_my_feelings">Drake - In My Feelings</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="exercise">EXERCISE</string>
    <string name="study">STUDY</string>
    <string name="sleep">SLEEP</string>
    <string name="live_heart_rate_135_bpm">Live Heart Rate: 135 BPM</string>
    <string name="_132">132</string>
    <string name="_145">145</string>
    <string name="minimum_maximum"><![CDATA[<-Minimum/Maximum->]]></string>
    <string name="heart_rate">Heart Rate</string>
    <string name="music_player">MUSIC PLAYER</string>
    <string name="current_song">Current Song</string>
    <string name="information_screen">Information Screen</string>
    <string name="activity_working_out">ACTIVITY: WORKING OUT</string>
    <string name="activity_studying">ACTIVITY: STUDYING</string>
    <string name="activity_sleeping">ACTIVITY: SLEEPING</string>
    <string name="settings">SETTINGS</string>
</resources>
