<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".musicplayer"
    android:background="#000">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/scorpion_by_drake"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/buttonE"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="207dp"
        android:drawableStart="@drawable/ic_action_play"
        android:drawableEnd="@drawable/ic_action_pause"
        android:text="@string/play_pause" />

    <Button
        android:id="@+id/buttonF"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="143dp"
        android:drawableStart="@drawable/ic_action_skipnext"
        android:text="@string/skip_song" />

    <Button
        android:id="@+id/buttonG"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonF"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:drawableStart="@drawable/ic_action_previous"
        android:drawableLeft="@drawable/ic_action_previous"
        android:text="@string/previous_song" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="320dp"
        android:text="@string/drake_in_my_feelings"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"
        app:fontFamily="cursive" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="192dp"
        android:text="@string/current_song"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Current Song" />

</RelativeLayout>